# nokes-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docker/: Dockerfile
docs/: index.html
nokes/: __init__.py  __main__.py
nokes/api/: __init__.py  config.py  server.py
nokes/cli/: main.py
nokes/core/: __init__.py  engine.py  llm_provider.py
nokes/memory/: __init__.py  retriever.py
nokes/models/: chat.py
nokes/tests/: __init__.py  test_engine.py
nokes/utils/: logging.py
